--- a/templates/prototipo/sismo_edit.html
+++ b/templates/prototipo/sismo_edit.html
@@ -1,7 +1,7 @@
 {% extends 'prototipo/base.html' %}
 
     {% block content %}
-        <h1>Editar</h1>
+        <h1>Señal</h1>
         <form method="POST" class="post-form">{% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="save btn btn-default">Save</button>
