--- a/templates/prototipo/base.html
+++ b/templates/prototipo/base.html
@@ -49,6 +49,10 @@
         </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="{% static 'js/graficos.js' %}"></script>
+
     </body>
     </html>
 
