--- a/templates/prototipo/sismo_edit.html
+++ b/templates/prototipo/sismo_edit.html
@@ -4,7 +4,7 @@
         <h1>Señal</h1>
         <form method="POST" enctype="multipart/form-data" class="post-form">{% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="save btn btn-default">Save</button>
+            <button type="submit" class="save btn btn-default">Guardar</button>
         </form>
     {% endblock %}
 
