--- a/templates/prototipo/base.html
+++ b/templates/prototipo/base.html
@@ -11,13 +11,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Aplicación Web</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="{% static 'css/personalizada.css' %}" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -32,19 +34,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">Aplicación Web</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Inicio</a></li>
-                <li class="active"><a href="señales.html">Señal</a></li>
-                <li><a href="noticias.html">Noticias</a></li>
+                <li><a href="">Inicio</a></li>
+                <li class="active"><a href="{% url 'Prototipo.views.sismos_list'%}">Señal</a></li>
+                <li><a href="">Noticias</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
 </nav>
         <div class="content container">
            {% block content %}
+
            {% endblock %}
         </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
