--- a/templates/prototipo/sismo_edit.html
+++ b/templates/prototipo/sismo_edit.html
@@ -2,7 +2,8 @@
 
     {% block content %}
         <h1>Señal</h1>
-        <form method="POST" enctype="multipart/form-data" class="post-form">{% csrf_token %}
+        <form method="POST" enctype="multipart/form-data" class="post-form">
+            {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="save btn btn-default">Guardar</button>
         </form>
